--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,12 @@
 {% extends "base.html" %}
-{% block content}
-<h1>About<h1>
-	{% endblock content}
+
+{% block head_title %}About || {{ block.super }}{% endblock head_title %}
+
+
+
+{% block content %}
+<h1>About</h1>
+
+{% include 'snippets/sidebar.html' %}
+
+{% endblock  %}
