--- a/gallery/templates/gallery/gallery_list.html
+++ b/gallery/templates/gallery/gallery_list.html
@@ -5,7 +5,7 @@
 
  <ul>
  	{% for obj in object_list %}
- 		<li><a href='/gallery/{{ obj.slug }}/'><img src="{{ obj.image.url }}" </a>width="50" </li>
+ 		<li><a href='/gallery/{{ obj.slug }}/'><img src="{{ obj.image.url }}" width="450" height="400"> </a></li>
  	{% endfor %}
  </ul>
  {% endblock %}		
