--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -3,7 +3,11 @@
 </div>
 
 
-<nav class="navbar navbar-default">
+
+
+
+
+<nav class="navbar navbar-default bg-light">
   <div class="container-fluid">
     <ul class="nav navbar-nav col-lg-4	text-success">
       <li><a href='/'>Home</a></li>
